# teobase

./: .gitignore  .gitmodules  AUTHORS  Makefile.am  README.md  autogen.sh  azure-pipelines.yml  configure.ac
gradle/: settings.gradle
gradle/gradle/wrapper/: gradle-wrapper.properties
gradle/teobase-dynamic/: CMakeLists.txt  build.gradle
gradle/teobase-dynamic/src/main/: AndroidManifest.xml
include/teobase/: api.h  logging.h  mutex.h  platform.h  socket.h  time.h  types.h  windows.h
msvc/: teobase-dynamic.vcxproj  teobase-dynamic.vcxproj.filters  teobase-static.vcxproj  teobase-static.vcxproj.filters  teobase.sln
src/: Makefile.am
src/teobase/: logging.c  mutex.c  socket.c  time.c
xcode/teobase-ios.xcodeproj/: project.pbxproj
xcode/teobase-ios.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/teobase-ios.xcodeproj/xcshareddata/xcschemes/: teobase.xcscheme
xcode/teobase-macos-bundle/: Info.plist
xcode/teobase-macos-bundle.xcodeproj/: project.pbxproj
xcode/teobase-macos-bundle.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/teobase-macos-bundle.xcodeproj/xcshareddata/xcschemes/: teobase.xcscheme
xcode/teobase-macos-static.xcodeproj/: project.pbxproj
xcode/teobase-macos-static.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/teobase-macos-static.xcodeproj/xcshareddata/xcschemes/: teobase.xcscheme
